--- a/blog/058.md
+++ b/blog/058.md
@@ -7,4 +7,32 @@ _2016-11-26 11:59:27_
 
 * * *
 
-content
+其实这种情况我已经是第二次遇见啦，第一次我是采用下载量产工具解决的，用了很长时间，步骤很烦琐，现在我都忘记当初是如何操作的，所以这次我依然求助百度，发现一个很简单的方法，连软件都不需要下载，重点是很快，现在记录一下，分享给大家。
+
+具体操作如下：
+Windows管理员身份运行命令行（Win+R）
+```
+C:\Users\panshiqu>diskpart
+
+Microsoft DiskPart 版本 6.1.7601
+Copyright (C) 1999-2008 Microsoft Corporation.
+在计算机上: PANSHIQU-PC
+
+DISKPART> list disk
+
+  磁盘 ###  状态           大小     可用     Dyn  Gpt
+  --------  -------------  -------  -------  ---  ---
+  磁盘 0    联机              465 GB  1024 KB
+  磁盘 1    联机               15 GB      0 B
+
+DISKPART> select disk 1
+
+磁盘 1 现在是所选磁盘。
+
+DISKPART> clean
+
+DiskPart 成功地清除了磁盘。
+```
+以上操作步骤实际是取消U盘原有分区，让它重新变成未分区的状态
+
+接下来进入微软的磁盘管理工具（右键我的电脑--管理--磁盘管理），然后你就用这个图形化管理工具吧，新建简单卷什么的都行（相当于重新分区，格式化）
