快速添加文章

--- a/blog/049.md
+++ b/blog/049.md
@@ -7,4 +7,8 @@ _2016-10-07 13:21:05_
 
 * * *
 
-content
+手机通讯录因还原并设置为新的 iPhone 而丢失（其实不仅限这一种丢失情况），原来并未通过 iCloud 同步通讯录（设置为新的 iPhone 后又创建了新的 Apple ID 进行登陆）。但是还原前曾通过 iTunes 手动备份，并且能使用 iBackupBot 打开备份文件查看自己的通讯录。
+
+几百条联系人，先不说手动输入是多么的浪费时间，万一输错怎么办？其实我一开始使用的是 iBackupBot 自带的 Restore 功能，一开始报错，百度后关闭 iCloud 等等，满足所有的前提条件后不再报错，手机都因为点击 Restore 而自动重启啦，但是通讯录却无论如何没有恢复成功。然后通过 Google 找到一篇文章讲如何使用 PhoneRescue 恢复手机通讯录，研究之后下载软件，通讯录都选好后，点恢复，这个软件需要注册码，真坑啊。之后又各种搜索尝试，始终没有找到合适的解决方案。
+
+最后我是用极简单的方法解决该问题，iBackupBot 选择 Contacts 点击 Export as vCard file 保存后，通过任何聊天工具发送到 iPhone，双击打开按照提示操作，久违的通讯录就回来啦。
