--- a/blog/050.md
+++ b/blog/050.md
@@ -7,4 +7,16 @@ _2016-10-10 17:22:53_
 
 * * *
 
-content
+五笔在我高中毕业的时候就学习啦，随着时间的流逝能用五笔打出来的字越来越少，近期想强化自己五笔的水平，就有了这篇汇总。
+
+首先推荐系统学习教程：[五笔打字教程（86版简明教程）](http://www.wb86.com/wbwz/86help.htm)
+
+若想知道某个字是如何拆分，请在[这里](http://www.52wubi.com/wbbmcx/search.php)查询
+
+若想知道某个字的具体笔划，请在[这里](http://hanyu.iciba.com/)查询
+
+在复习的过程中，我样中了 52wubi.com 提供的拆分 gif 动态图，同时样中了 iciba.com 提供的笔划 swf 文件，就想通过这两种素材为自己实现一个[常用汉字](http://hanyu.iciba.com/zt/3500.html)练习工具。所有素材及程序源码均已上传至 [github](https://github.com/panshiqu/wubi)，己同时编译出 mac,linux,windows 三个版本，各版本使用方式如下：
+
+* mac ./mac
+* linux ./linux
+* windows windows.exe
