--- a/blog/052.md
+++ b/blog/052.md
@@ -7,4 +7,11 @@ _2016-11-02 16:06:36_
 
 * * *
 
-content
+用 Mac 已经有一段时间啦，常用软件慢慢安装在 Mac 上，今天准备安装 Navicat Premium 用于访问 MySQL 数据库，总喜欢安装软件最新版的我只想去官网下载，但是通过百度搜索破解方法都是针对往期版本，下载的破解文件替换后程序就起不来啦，费了好长时间也没有找到合适的破解文件。快放弃的时候突然想到试试 Google 或许能找到方法，果不其然直接找到合适的破解文件。
+
+破解文件 [Navicat Premium](./download/navicat.zip)
+
+* 官网下载 [Navicat Premium](https://www.navicat.com.cn/download/navicat-premium) 并安装
+* 打开文件夹 `/Applications/Navicat\ Premium.app/Contents/MacOS/` 替换 Navicat Premium 文件
+
+感谢 [xclient.info](http://xclient.info/s/navicat-premium.html)
