--- a/blog/047.md
+++ b/blog/047.md
@@ -7,4 +7,230 @@ _2016-09-27 18:32:46_
 
 * * *
 
-content
+内容整理自 [Markdown 语法说明 (简体中文版)](http://www.appinn.com/markdown/index.html) ，便于自己快速复习，若想系统学习 Markdown 请访问原网页。
+
+---
+
+在 HTML 区块标签间的 Markdown 格式语法将不会被处理，反之却会被处理
+
+---
+
+特殊字符 &lt; `&lt;`  
+特殊字符 &amp; `&amp;`  
+特殊字符 &copy; `&copy;`  
+
+---
+
+一个 Markdown 段落是由一个或多个连续的文本行组成，它的前后要有一个以上的空行（空行的定义是显示上看起来像是空的，便会被视为空行。比方说，若某一行只包含空格和制表符，则该行也会被视为空行）。普通段落不该用空格或制表符来缩进。
+
+如果你确实想要依赖 Markdown 来插入 `<br />` 标签的话，在插入处先按入两个以上的空格然后回车。
+
+---
+
+类 Setext 形式是用底线的形式，利用 = （最高阶标题）和 - （第二阶标题）
+
+```
+This is an H1
+=============
+
+This is an H2
+-------------
+```
+This is an H1
+=============
+
+This is an H2
+-------------
+
+---
+
+类 Atx 形式则是在行首插入 1 到 6 个 # ，对应到标题 1 到 6 阶
+
+```
+#This is an H1
+######This is an H6
+```
+#This is an H1
+######This is an H6
+
+---
+
+Markdown 标记区块引用是使用类似 email 中用 > 的引用方式  
+Markdown 也允许你偷懒只在整个段落的第一行最前面加上 >  
+区块引用可以嵌套（例如：引用内的引用），只要根据层次加上不同数量的 >  
+引用的区块内也可以使用其他的 Markdown 语法，包括标题、列表、代码区块等  
+
+```
+>* 先做一个好人
+>* 再做一个好程序员
+>>*张圣超*
+```
+>* 先做一个好人
+>* 再做一个好程序员
+>>*张圣超*
+
+---
+
+Markdown 支持有序列表和无序列表  
+无序列表使用星号、加号或是减号作为列表标记  
+
+```
++ List 1
++ List 2
+```
++ List 1
++ List 2
+
+有序列表则使用数字接着一个英文句点
+
+```
+1. List 1
+2. List 2
+```
+1. List 1
+2. List 2
+
+列表项目标记通常是放在最左边，但是其实也可以缩进，最多 3 个空格，项目标记后面则一定要接着至少一个空格或制表符
+
+如果列表项目间用空行分开，在输出 HTML 时 Markdown 就会将项目内容用 `<p>` 标签包起来
+
+列表项目可以包含多个段落，每个项目下的段落都必须缩进 4 个空格或是 1 个制表符
+
+如果要在列表项目内放进引用，那 > 就需要缩进
+
+如果要放代码区块的话，该区块就需要缩进两次，也就是 8 个空格或是 2 个制表符
+
+---
+
+要在 Markdown 中建立代码区块很简单，只要简单地缩进 4 个空格或是 1 个制表符就可以  
+这个每行一阶的缩进（4 个空格或是 1 个制表符），都会被移除  
+一个代码区块会一直持续到没有缩进的那一行（或是文件结尾）  
+
+```
+	code line 1
+	code line 2
+```
+	code line 1
+	code line 2
+
+---
+
+你可以在一行中用三个以上的星号、减号、底线来建立一个分隔线，行内不能有其他东西。你也可以在星号或是减号中间插入空格
+
+```
+---
+```
+
+---
+
+Markdown 支持两种形式的链接语法： 行内式和参考式两种形式
+
+不管是哪一种，链接文字都是用 [方括号] 来标记
+
+要建立一个行内式的链接，只要在方块括号后面紧接着圆括号并插入网址链接即可，如果你还想要加上链接的 title 文字，只要在网址后面，用双引号把 title 文字包起来即可
+
+如果你是要链接到同样主机的资源，你可以使用相对路径
+
+参考式的链接是在链接文字的括号后面再接上另一个方括号，而在第二个方括号里面要填入用以辨识链接的标记，你也可以选择性地在两个方括号中间加上一个空格，接着，在文件的任意处，你可以把这个标记的链接内容定义出来
+
+链接内容定义的形式为
+* 方括号（前面可以选择性地加上至多三个空格来缩进），里面输入链接文字
+* 接着一个冒号
+* 接着一个以上的空格或制表符
+* 接着链接的网址
+* 选择性地接着 title 内容，可以用单引号、双引号或是括弧包着
+
+```
+请访问 [休闲益智游戏](http://www.iplaygame.com.cn "定期更新休闲益智游戏供你挑战") 支持我
+请访问 [休闲益智游戏][1] 支持我
+[1]: http://www.iplaygame.com.cn "定期更新休闲益智游戏供你挑战"
+```
+请访问 [休闲益智游戏](http://www.iplaygame.com.cn "定期更新休闲益智游戏供你挑战") 支持我
+请访问 [休闲益智游戏][1] 支持我
+[1]: http://www.iplaygame.com.cn "定期更新休闲益智游戏供你挑战"
+
+网址定义只有在产生链接的时候用到，并不会直接出现在文件之中
+
+链接辨别标签可以有字母、数字、空白和标点符号，但是并不区分大小写
+
+---
+
+Markdown 使用星号（\*）和底线（\_）作为标记强调字词的符号，被 * 或 _ 包围的字词会被转成用 `<em>` 标签包围，用两个 * 或 _ 包起来的话，则会被转成 `<strong>`
+
+但是如果你的 * 和 _ 两边都有空白的话，它们就只会被当成普通的符号
+
+如果要在文字前后直接插入普通的星号或底线，你可以用反斜线
+
+```
+*你好* _你好_ **你好** __你好__ \*你好\*
+```
+*你好* _你好_ **你好** __你好__ \*你好\*
+
+---
+
+如果要标记一小段行内代码，你可以用反引号把它包起来（`）
+
+如果要在代码区段内插入反引号，你可以用多个反引号来开启和结束代码区段
+
+代码区段的起始和结束端都可以放入一个空白，起始端后面一个，结束端前面一个，这样你就可以在区段的一开始就插入反引号
+
+```
+`printf()`
+``(`)``
+`` ` ``
+```
+`printf()`
+``(`)``
+`` ` ``
+
+---
+
+Markdown 使用一种和链接很相似的语法来标记图片，同样也允许两种样式： 行内式和参考式
+
+详细叙述如下
+* 一个惊叹号
+* 接着一个方括号，里面放上图片的替代文字
+* 接着一个普通括号，里面放上图片的网址，最后还可以用引号包住并加上 选择性的 'title' 文字
+
+```
+![休闲益智游戏](http://avatar.csdn.net/0/3/7/1_panshiqu.jpg "定期更新休闲益智游戏供你挑战")
+![休闲益智游戏][img]
+[img]: http://avatar.csdn.net/0/3/7/1_panshiqu.jpg "定期更新休闲益智游戏供你挑战"
+```
+![休闲益智游戏](http://avatar.csdn.net/0/3/7/1_panshiqu.jpg "定期更新休闲益智游戏供你挑战")
+![休闲益智游戏][img]
+[img]: http://avatar.csdn.net/0/3/7/1_panshiqu.jpg "定期更新休闲益智游戏供你挑战"
+
+到目前为止， Markdown 还没有办法指定图片的宽高，如果你需要的话，你可以使用普通的 `<img>` 标签
+
+---
+
+Markdown 支持以比较简短的自动链接形式来处理网址和电子邮件信箱，只要是用方括号包起来， Markdown 就会自动把它转成链接
+
+邮址的自动链接也很类似，只是 Markdown 会先做一个编码转换的过程，把文字字符转成 16 进位码的 HTML 实体，这样的格式可以糊弄一些不好的邮址收集机器人
+
+```
+<http://www.iplaygame.com.cn>
+<panshiqu@sina.com>
+```
+<http://www.iplaygame.com.cn>
+<panshiqu@sina.com>
+
+---
+
+Markdown 可以利用反斜杠来插入一些在语法中有其它意义的符号，Markdown 支持以下这些符号前面加上反斜杠来帮助插入普通的符号
+
+```
+\   反斜线
+`   反引号
+*   星号
+_   底线
+{}  花括号
+[]  方括号
+()  括弧
+#   井字号
++   加号
+-   减号
+.   英文句点
+!   惊叹号
+```
