--- a/blog/048.md
+++ b/blog/048.md
@@ -7,4 +7,31 @@ _2016-10-07 12:30:03_
 
 * * *
 
-content
+前段时间想还原 iPhone 手机，抹掉所有内容和设置，需要验证访问限制密码，很早的时候设置的访问限制密码，又不常用，都忘记啦。然后就找各种方法，最后成功找回，现在把可行的方法整理出来，供需要的朋友参考。
+
+方法是根据苹果加密『访问限制密码』的算法进行『密码穷举』从而破解的，所以不会丢失数据。
+
+* 下载并安装 iTunes，『手动备份和恢复』备份 iPhone 数据到本地电脑，不要勾选『iPhone备份加密』。
+
+* 下载并安装 iBackupBot，不需要注册，有 Mac 和 Windows 版本。安装完成后运行，iBackupBot 会自动搜索 iPhone 的备份文件。从备份文件中定位：`System Files/HomeDomain/Library`，然后在右边的搜索框中输入：`com.apple.restrictionspassword.plist`，可以搜索到这个密码文件。打开这个文件，提示注册时，直接点『取消』，然后会显示文件内容。
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>RestrictionsPasswordKey</key>
+	<data>
+	arZUjea+R904/HjBt1En5P17gqM=
+	</data>
+	<key>RestrictionsPasswordSalt</key>
+	<data>
+	eRL67g==
+	</data>
+</dict>
+</plist>
+```
+* 将文件中的『arZUjea+R904/HjBt1En5P17gqM=』和『eRL67g==』复制到网站 [Recover iOS7+ Restrictions Passcodes](http://ios7hash.derson.us/) 对应的文本框中，然后点击『Search for Code』。程序会从 0000 开始逐一递增进行『密码穷举』一直到找到密码时，弹出提示框提示即『访问限制密码』。设置的密码数字越大，搜索的时间越长。
+
+* 根据开发者介绍，这个方法同样适用于 IOS 的其它设备。在查找的时候，你可以通过网页多开，并自行设置`Starting Passcode`和`Last Search Code`区间进而加快查找的速度，节省宝贵的时间。
+
+文章内容整理自 [Fiez Wang 的知乎回答](https://www.zhihu.com/question/20831363/answer/96581795?from=profile_answer_card)，此致、敬礼
