拒绝英文单引号歧义

--- a/blog/053.md
+++ b/blog/053.md
@@ -25,7 +25,7 @@ mysql>
 Prompt | Meaning
 --- | ---
 mysql> | Ready for new query
-'> |	Waiting for next line, waiting for completion of a string that began with a single quote (')
+\'> |	Waiting for next line, waiting for completion of a string that began with a single quote (\')
 "> |	Waiting for next line, waiting for completion of a string that began with a double quote (")
 \`> |	Waiting for next line, waiting for completion of an identifier that began with a backtick (`)
 /*> |	Waiting for next line, waiting for completion of a comment that began with /*
@@ -87,7 +87,7 @@ Pattern | Matching
 ^ | 匹配开始处
 $ | 匹配结尾处
 
-注：LIKE 匹配整个被测试值，REGEXP 匹配任何部分被测试值（LIKE '%w%' 等价 REGEXP 'w'）
+注：LIKE 匹配整个被测试值，REGEXP 匹配任何部分被测试值（LIKE \'%w%\' 等价 REGEXP \'w\'）
 注：匹配默认不关心大小写，可以强制关心大小写 `REGEXP BINARY '^b'`
 
 以上两种模式匹配总结自 [这里](http://dev.mysql.com/doc/refman/5.7/en/pattern-matching.html)，请访问查看相关示例
