拒绝英文双引号歧义

--- a/blog/069.md
+++ b/blog/069.md
@@ -93,7 +93,7 @@ NOTE: Equality matches on the whole embedded document require an exact match of 
 
 ####Query on Nested Field
 
-To specify a query condition on fields in an embedded/nested document, use dot notation ("field.nestedField").
+To specify a query condition on fields in an embedded/nested document, use dot notation (\"field.nestedField\").
 
 NOTE: When querying using dot notation, the field and nested field must be inside quotation marks.
 
@@ -126,7 +126,7 @@ To specify equality condition on an array, use the query document { <field>: <va
 db.inventory.find( { tags: ["red", "blank"] } )
 ```
 
-If, instead, you wish to find an array that contains both the elements "red" and "blank", without regard to order or other elements in the array, use the $all operator:
+If, instead, you wish to find an array that contains both the elements \"red\" and \"blank\", without regard to order or other elements in the array, use the $all operator:
 
 ```
 db.inventory.find( { tags: { $all: ["red", "blank"] } } )
@@ -308,7 +308,7 @@ db.inventory.find( { status: "A" }, { item: 1, status: 1, "instock.qty": 1 } )
 
 For fields that contain arrays, MongoDB provides the following projection operators for manipulating arrays: $elemMatch, $slice, and $.
 
-$elemMatch, $slice, and $ are the only way to project specific elements to include in the returned array. For instance, you cannot project specific array elements using the array index; e.g. { "instock.0": 1 } projection will not project the array with the first element.
+$elemMatch, $slice, and $ are the only way to project specific elements to include in the returned array. For instance, you cannot project specific array elements using the array index; e.g. { \"instock.0\": 1 } projection will not project the array with the first element.
 
 ```
 db.inventory.find( { status: "A" }, { item: 1, status: 1, instock: { $slice: -1 } } )
