--- a/blog/053.md
+++ b/blog/053.md
@@ -26,7 +26,7 @@ Prompt | Meaning
 --- | ---
 mysql> | Ready for new query
 \'> |	Waiting for next line, waiting for completion of a string that began with a single quote (\')
-"> |	Waiting for next line, waiting for completion of a string that began with a double quote (")
+\"> |	Waiting for next line, waiting for completion of a string that began with a double quote (\")
 \`> |	Waiting for next line, waiting for completion of an identifier that began with a backtick (`)
 /*> |	Waiting for next line, waiting for completion of a comment that began with /*
 
