简单调整显示表格

--- a/blog/053.md
+++ b/blog/053.md
@@ -22,12 +22,13 @@ mysql>
 ```
 
 提示符及含义
+
 Prompt | Meaning
 --- | ---
 mysql> | Ready for new query
 \'> |	Waiting for next line, waiting for completion of a string that began with a single quote (\')
 \"> |	Waiting for next line, waiting for completion of a string that began with a double quote (\")
-\`> |	Waiting for next line, waiting for completion of an identifier that began with a backtick (`)
+\`> |	Waiting for next line, waiting for completion of an identifier that began with a backtick
 /*> |	Waiting for next line, waiting for completion of a comment that began with /*
 
 该查询不会执行，提示符已经提醒你遗漏了右单引号，但是如何终止查询呢？请输入 `'\c` (先补上右单引号)
