增加必要空行，#后增加空格，增加转义

--- a/blog/053.md
+++ b/blog/053.md
@@ -73,12 +73,14 @@ WHERE death IS NOT NULL
 NULL 值在用 `ORDER BY` 升序时排第一，降序排最后
 
 模式匹配 `LIKE or NOT LIKE`
+
 Pattern | Matching
 --- | ---
 _ 下划线 | 任一字符
 % 百分号 | 任意数量字符（零字符）
 
 扩展模式匹配 `REGEXP and NOT REGEXP or RLIKE and NOT RLIKE`
+
 Pattern | Matching
 --- | ---
 . | 任一字符
@@ -105,7 +107,7 @@ shell> mysql < batch-file
 C:\> mysql -e "source batch-file"
 shell> mysql -h host -u user -p < batch-file
 ```
-增加 --force 选项忽略错误继续执行
+增加 -\-force 选项忽略错误继续执行
 `mysql -t` Get the interactive output format in batch mode
 `mysql -v` To echo to the output the statements that are executed
 
