--- a/blog/055.md
+++ b/blog/055.md
@@ -162,7 +162,7 @@ mysql> SELECT ISNULL(null), ISNULL(Null), ISNULL(NULL);
 +--------------+--------------+--------------+
 ```
 
-#Normalization, Merging, and Autowrapping of JSON Values
+# Normalization, Merging, and Autowrapping of JSON Values
 
 相同的 Key 会被丢弃，即便值不同
 ```
@@ -211,7 +211,7 @@ mysql> SELECT JSON_MERGE('[10, 20]', '{"a": "x", "b": "y"}');
 +------------------------------------------------+
 ```
 
-#Searching and Modifying JSON Values
+# Searching and Modifying JSON Values
 
 通过 JSON path expression 取 JSON document 中值
 Path expressions 非常有用通过函数提取和修改 JSON document 中值
@@ -228,8 +228,8 @@ Path syntax 通过开头一个 $ 来代表 JSON document，可选的跟着选择
 每个 key name 后面跟一个点号，当 key name 在某种情况（含有空格）下非法时可以用双引号括起来
 [N] 追加到 Path 来选择数组中的一个位置为 N 的元素，数组从 0 起始
 可以包含通配符
-.[*] JSON object 所有成员
-[*] JSON array 所有元素
+.[\*] JSON object 所有成员
+[\*] JSON array 所有元素
 prefix**suffix 匹配所有 prefix 开始，suffix 结束
 Path 在文档中不存在取值为 NULL
 
@@ -316,8 +316,8 @@ mysql> SELECT JSON_REMOVE(@j, '$[2]', '$[1].b[1]', '$[1].b[1]');
 +---------------------------------------------------+
 ```
 
-#Comparison and Ordering of JSON Values
+# Comparison and Ordering of JSON Values
 略
 
-#Aggregation of JSON Values
+# Aggregation of JSON Values
 略
